cambios vista bienvenido

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,24 +1,34 @@
 #regulariz{
     display: none;
 }
-/* #login{
+#login{
     display: none;
-} */
-/* #welcomeUser{
+}
+#welcomeUser{
     display: none;
-} */
-#botones{
+}
+/* #botones{
     display: none;
 
-}
-#carrousel{
+} */
+/* #carrousel{
     display: none;
-}
-nav{
+} */
+/* nav{
     display: none;
-}
+} */
 
 #chat{
     display: none;
  
+}
+.colorNav{
+    background-color: #55becc;
+}
+.bienvenido{
+display: block;
+}
+
+.imgSlider{
+    opacity: 60% !important;
 }
