--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,10 @@
 }
 /* #login{
     display: none;
-} */
-/* #welcomeUser{
+}  */
+#welcomeUser{
     display: none;
-} */
+}  
 #botones{
     display: none;
 
@@ -18,7 +18,11 @@ nav{
     display: none;
 }
 
-#chat{
+#chat {
+    display: none;
+}
+
+#chat_window{
     display: none;
  
-}
+} 
