--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,16 +7,16 @@
 #welcomeUser{
     display: none;
 }
-/* #botones{
+#botones{
     display: none;
 
-} */
-/* #carrousel{
+}
+#carrousel{
     display: none;
-} */
-/* nav{
+}
+nav{
     display: none;
-} */
+}
 
 #chat{
     display: none;
@@ -39,4 +39,8 @@ display: block;
 }
 .loginPage{
     display: none;
+}
+.slider{
+    display: none;
+
 }
