--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,6 +8,17 @@
     height: 100%;
     min-height: 100%;
     min-width: 100%;
+    background: url("../image/img-2.jpg");
+    background-size:cover;
+    z-index: -10;
+}
+
+.loginPage:before{
+    content: "";
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
     display: inline-block;
     background: url("../image/img-2.jpg") center center;
     background-size: cover;
@@ -29,4 +40,3 @@
 textarea {
     width: 60%;
 }
-
