--- a/public/css/valeuno.css
+++ b/public/css/valeuno.css
@@ -26,11 +26,11 @@ h1 {
 
 /*#chat {
     display: none;
-}*/
-
+}
 .chatZone {
     display: none;
-} */
+}*/
+
 
 * {
     font-family: 'Roboto', sans-serif;
