--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,10 +3,26 @@
 }
 
 #navBar, #regulariz, #carousel, #chat-btn, #botones, #welcomUser, #chat {
+*/
+.chatZone{
+    display: none;
 
+}
+#chat-btn{
+    display: none;
+}
+#regulariz {
+    display: none;
+}
+#loginContent{
+    display: none;
+}
+#titulo{
+    display: none;
+}
 .colorNav{
     background-color: #55becc;
-}*/
+}
 
 #navLogo {
     width: 1.5em;
@@ -29,8 +45,11 @@
 } 
 .colorBotones{
     background-color: #55becc;
-    height: 6em;
-    width: 11em;
+    height: 8em;
+    width: 12em;
+    font-size: 10px;
+    line-height: 20px;
+    padding: 13px;
 }
 .botonesReg{
     margin-top: 3em;
@@ -44,3 +63,10 @@
     color: black;
 }
 
+.botonSlider{
+
+background-color: #55becc !important;
+}
+.tamañoTextslidr{
+    font-size: 35px
+}
