--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,30 +1,16 @@
-/*#login{
+#login{
     display: block;
 }
 
-#navBar, #regulariz, #carousel, #chat-btn, #botones, #welcomUser, #chat {
-*/
+#navBar, #regulariz, #carousel, #chatBtn, #botones, #welcomUser, #chat, #chatZone{
+    display: none;
+}
 
 html, body {
     margin: 0;
 }
 
-.chatZone{
-    display: none;
 
-}
-#chat-btn{
-    display: none;
-}
-#regulariz {
-    display: none;
-}
-#loginContent{
-    display: none;
-}
-#titulo{
-    display: none;
-}
 .colorNav{
     background-color: #55becc;
 }
