--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,31 +1,18 @@
-.loginPage {
+#login {
     position: absolute;
     top:0;
     bottom:0;
     left:0;
     right:0;
     width: 100%;
-    height: 100%;
-    min-height: 100%;
-    min-width: 100%;
-    background: url("../image/img-2.jpg");
-    background-size:cover;
-    z-index: -10;
-}
-
-.loginPage:before{
-    content: "";
-    width: 100%;
-    height: 100%;
-    min-height: 100%;
-    min-width: 100%;
-    display: inline-block;
+    height: auto;
     background: url("../image/img-2.jpg") center center;
-    background-size: cover;
+    background-size:cover;
     -webkit-filter: opacity(.6);
     filter: opacity(.6);
-    display: none;
 }
+
+
 
 #img-logo {
 
