--- a/css/login.css
+++ b/css/login.css
@@ -1,4 +1,4 @@
-#login {
+/* #login {
     position: absolute;
     top:0;
     bottom:0;
@@ -36,4 +36,4 @@ input:not([type]), input[type=text]:not(.browser-default), input[type=password]:
     border-top: 1px rgb(216, 210, 210) solid;
     margin-left: 5rem;
     margin-top: 1rem;
-}
+} */
