--- a/css/valeuno.css
+++ b/css/valeuno.css
@@ -1,12 +1,12 @@
 /* valeuno */
-#box1, #box2, #box3, #box4, #box5, #box6 {
+/* #box1, #box2, #box3, #box4, #box5, #box6 {
     color: white;
-    height: 7rem;
+    height: 7rem; */
  /* background-color: red; */
-    text-align: center;
-}
+    /* text-align: center;
+} */
 
-/* valedos */
+/* valedos
 #header {
     text-align: center;
 }
@@ -20,7 +20,7 @@
 h1 {
     font-size: 2.2rem;
     margin: 0;
-}
+} */
 
 /* Chat */
 
@@ -33,7 +33,7 @@ h1 {
 }*/
 
 
-* {
+/* * {
     font-family: 'Roboto', sans-serif;
 }
 
@@ -108,11 +108,11 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
 
 .nombre {
     margin-left: 14px;
-}
+} */
 
 
 /* Nav */
-.logo-nav {
+/* .logo-nav {
     width: 59%;
     margin-left: 7px;
 }
@@ -120,10 +120,10 @@ input:not([type]):focus:not([readonly]), input[type=text]:not(.browser-default):
 nav .nav-wrapper {
     padding: 6px;
     
-}
+} */
 
 /* btns */
-.btn-large {
+/* .btn-large {
     height: 144px;
     line-height: 30px;
     font-size: 15px;
@@ -144,10 +144,10 @@ nav .nav-wrapper {
     font-size: 13px;
     text-transform: none;
     line-height: 15px;
-}
+} */
 
 /* textos regular, irregular */
-li {
+/* li {
     color: #EE542D;
 }
 
@@ -207,4 +207,4 @@ p.subtitle_page2 {
     background-color: #55BECC;
     color: white;
     font-weight: 600;
-}
+} */
